# Copyright © 2017 Bart Massey
# [This program is licensed under the "MIT License"]
# Please see the file COPYING in the source
# distribution of this software for license terms.

[package]
name = "sugarmantra"
version = "0.3"
authors = ["Bart Massey <bart@cs.pdx.edu>"]

# Need at least multiset 0.0.5 which has not yet been
# accepted in upstream GitHub or pushed to Cargo as of this writing.
[dependencies.multiset]
git = "http://github.com/BartMassey/multiset"
branch = "master"
version = "0.0.5"
