# Copyright © 2017 Bart Massey
# [This program is licensed under the "MIT License"]
# Please see the file COPYING in the source
# distribution of this software for license terms.

[package]
name = "sugarmantra"
version = "0.3.3"
authors = ["Bart Massey <bart@cs.pdx.edu>"]
edition = "2021"

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }

# The hacked version of multiset is unfortunate. Should fix.
[dependencies.multiset]
git = "http://github.com/BartMassey/multiset"
branch = "master"
version = "0.0.7"

[profile.release]
lto = "fat"
codegen-units = 1
